fixed stupid jupyter error

--- a/week-6-hw-eeb174.ipynb
+++ b/week-6-hw-eeb174.ipynb
@@ -7,14 +7,14 @@
     "# Part 1: Code Academy Review\n",
     "\n",
     "\n",
-    "![Python syntax](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/python_syntax.png)\n",
-    "![String and console output](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/string_and_console.png)\n",
-    "![Conditionals and Control flow](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/conditional_and_flow.png)\n",
-    "![Functions](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/functions.png)\n",
-    "![Python Lists and Dictionaries](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/python_lists_and _dictionary.png)\n",
-    "![Lists and functions](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/lists_and_functions.png)\n",
-    "![Loops](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/loops.png)\n",
-    "![Practice makes perfect](/home/eeb177-student/Desktop/eeb-177/homework/codeacademy/practice_makes_perfect.png)"
+    "![Python syntax](python_syntax.png)\n",
+    "![String and console output](string_and_console.png)\n",
+    "![Conditionals and Control flow](conditional_and_flow.png)\n",
+    "![Functions](functions.png)\n",
+    "![Python Lists and Dictionaries](python_lists_and _dictionary.png)\n",
+    "![Lists and functions](lists_and_functions.png)\n",
+    "![Loops](loops.png)\n",
+    "![Practice makes perfect](practice_makes_perfect.png)\n"
    ]
   },
   {
