fixing image display issue on gihub

--- a/week-6-hw-eeb174.ipynb
+++ b/week-6-hw-eeb174.ipynb
@@ -7,14 +7,14 @@
     "# Part 1: Code Academy Review\n",
     "\n",
     "\n",
-    "![Python syntax](python_syntax.png)\n",
-    "![String and console output](string_and_console.png)\n",
-    "![Conditionals and Control flow](conditional_and_flow.png)\n",
-    "![Functions](functions.png)\n",
-    "![Python Lists and Dictionaries](python_lists_and _dictionary.png)\n",
-    "![Lists and functions](lists_and_functions.png)\n",
-    "![Loops](loops.png)\n",
-    "![Practice makes perfect](practice_makes_perfect.png)\n"
+    "![Python syntax](python_syntax.png?raw=true)\n",
+    "![String and console output](string_and_console.png?raw=true)\n",
+    "![Conditionals and Control flow](conditional_and_flow.png?raw=true)\n",
+    "![Functions](functions.png?raw=true)\n",
+    "![Python Lists and Dictionaries](python_lists_and _dictionary.png?raw=true)\n",
+    "![Lists and functions](lists_and_functions.png?raw=true)\n",
+    "![Loops](loops.png?raw=true)\n",
+    "![Practice makes perfect](practice_makes_perfect.png?raw=true)\n"
    ]
   },
   {
