still trying to fix the image embedding issue on github

--- a/week-6-hw-eeb174.ipynb
+++ b/week-6-hw-eeb174.ipynb
@@ -7,7 +7,7 @@
     "# Part 1: Code Academy Review\n",
     "\n",
     "\n",
-    "![Python syntax](python_syntax.png?raw=true)\n",
+    "![Python syntax](python_syntax.png)\n",
     "![String and console output](string_and_console.png?raw=true)\n",
     "![Conditionals and Control flow](conditional_and_flow.png?raw=true)\n",
     "![Functions](functions.png?raw=true)\n",
